--- a/src/components/sections/WhatIDo.css
+++ b/src/components/sections/WhatIDo.css
@@ -295,7 +295,9 @@
   }
   .what-content {
     padding: 50px;
-    width: 500px;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
   }
   .what-content p {
     font-size: 14px;
@@ -320,7 +322,7 @@
   .what-box h2 {
     margin: 50px 0;
     font-size: 55px;
-    line-height: 53px;
+    line-height: 65px;
   }
   .what-box:first-child {
     justify-content: left;
@@ -329,12 +331,13 @@
     height: 500px;
   }
   .what-box {
-    width: 500px;
-    max-width: calc(100% - 50px);
+    width: 100%;
+    max-width: calc(100% - 20px);
     margin: auto;
   }
   .what-content {
     width: 100%;
+    box-sizing: border-box;
   }
   .what-box-in {
     margin-left: 0px;
@@ -379,10 +382,20 @@
     place-items: inherit;
     align-items: start;
     justify-content: left;
+    padding: 20px 0;
   }
   .what-box {
-    max-width: calc(100% - 25px);
+    max-width: 100%;
     margin: 0;
+  }
+  .what-content {
+    padding: 20px !important;
+  }
+  .what-box-in {
+    height: auto;
+  }
+  .what-content h3 {
+    font-size: 20px;
   }
 }
 @media only screen and (min-width: 1950px) {
